--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,29 @@
 <resources>
     <string name="app_name">Shandi_Memo</string>
     <string name="null_text">변경될 텍스트</string>
+
+    <string-array name="classArray">
+        <item>디스트로이어</item>
+        <item>워로드</item>
+        <item>버서커</item>
+        <item>홀리나이트</item>
+        <item>배틀마스터</item>
+        <item>인파이터</item>
+        <item>기공사</item>
+        <item>창술사</item>
+        <item>스트라이커</item>
+        <item>데빌헌터</item>
+        <item>블래스터</item>
+        <item>호크아이</item>
+        <item>스카우터</item>
+        <item>건슬링어</item>
+        <item>바드</item>
+        <item>서머너</item>
+        <item>아르카나</item>
+        <item>소서리스</item>
+        <item>데모닉</item>
+        <item>블레이드</item>
+        <item>리퍼</item>
+        <item>도화가</item>
+    </string-array>
 </resources>
